cl/EnquestesParser.py
# Generated from Enquestes.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class EnquestesParser ( Parser ):

    grammarFileName = "Enquestes.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'\n'", "<INVALID>", 
                     "<INVALID>", "'END'", "'PREGUNTA'", "'RESPOSTA'", "'ITEM'", 
                     "'ALTERNATIVA'", "'ENQUESTA'", "<INVALID>", "';'", 
                     "'->'", "','", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INT", "WS", "NL", "SEP", "COMMENT", 
                      "END", "PREGUNTA", "RESPOSTA", "ITEM", "ALTERNATIVA", 
                      "ENQUESTA", "ID", "SEMI", "ARROW", "COMMA", "LPAR", 
                      "RPAR", "LCLAU", "RCLAU", "WORD" ]

    RULE_root = 0
    RULE_enquesta = 1
    RULE_preg = 2
    RULE_text_pregunta = 3
    RULE_resp = 4
    RULE_opcions_resposta = 5
    RULE_opcio_resposta = 6
    RULE_text_opcio = 7
    RULE_id_opcio = 8
    RULE_item = 9
    RULE_id_preg = 10
    RULE_id_resp = 11
    RULE_alte = 12
    RULE_alternatives = 13
    RULE_alternativa = 14
    RULE_enqu = 15
    RULE_identificador = 16

    ruleNames =  [ "root", "enquesta", "preg", "text_pregunta", "resp", 
                   "opcions_resposta", "opcio_resposta", "text_opcio", "id_opcio", 
                   "item", "id_preg", "id_resp", "alte", "alternatives", 
                   "alternativa", "enqu", "identificador" ]

    EOF = Token.EOF
    INT=1
    WS=2
    NL=3
    SEP=4
    COMMENT=5
    END=6
    PREGUNTA=7
    RESPOSTA=8
    ITEM=9
    ALTERNATIVA=10
    ENQUESTA=11
    ID=12
    SEMI=13
    ARROW=14
    COMMA=15
    LPAR=16
    RPAR=17
    LCLAU=18
    RCLAU=19
    WORD=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EnquestesParser.EOF, 0)

        def enquesta(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.EnquestaContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.EnquestaContext,i)


        def getRuleIndex(self):
            return EnquestesParser.RULE_root




    def root(self):

        localctx = EnquestesParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.enquesta()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EnquestesParser.ID):
                    break

            self.state = 39
            self.match(EnquestesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnquestaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END(self):
            return self.getToken(EnquestesParser.END, 0)

        def preg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.PregContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.PregContext,i)


        def resp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.RespContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.RespContext,i)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.ItemContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.ItemContext,i)


        def alte(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.AlteContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.AlteContext,i)


        def enqu(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.EnquContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.EnquContext,i)


        def NL(self):
            return self.getToken(EnquestesParser.NL, 0)

        def getRuleIndex(self):
            return EnquestesParser.RULE_enquesta




    def enquesta(self):

        localctx = EnquestesParser.EnquestaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_enquesta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 41
                    self.preg()
                    pass

                elif la_ == 2:
                    self.state = 42
                    self.resp()
                    pass

                elif la_ == 3:
                    self.state = 43
                    self.item()
                    pass

                elif la_ == 4:
                    self.state = 44
                    self.alte()
                    pass

                elif la_ == 5:
                    self.state = 45
                    self.enqu()
                    pass


                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EnquestesParser.ID):
                    break

            self.state = 50
            self.match(EnquestesParser.END)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EnquestesParser.NL:
                self.state = 51
                self.match(EnquestesParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PregContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(EnquestesParser.IdentificadorContext,0)


        def SEP(self):
            return self.getToken(EnquestesParser.SEP, 0)

        def PREGUNTA(self):
            return self.getToken(EnquestesParser.PREGUNTA, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.NL)
            else:
                return self.getToken(EnquestesParser.NL, i)

        def text_pregunta(self):
            return self.getTypedRuleContext(EnquestesParser.Text_preguntaContext,0)


        def getRuleIndex(self):
            return EnquestesParser.RULE_preg




    def preg(self):

        localctx = EnquestesParser.PregContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_preg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.identificador()
            self.state = 55
            self.match(EnquestesParser.SEP)
            self.state = 56
            self.match(EnquestesParser.PREGUNTA)
            self.state = 57
            self.match(EnquestesParser.NL)
            self.state = 58
            self.text_pregunta()
            self.state = 59
            self.match(EnquestesParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Text_preguntaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.INT)
            else:
                return self.getToken(EnquestesParser.INT, i)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.WORD)
            else:
                return self.getToken(EnquestesParser.WORD, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ID)
            else:
                return self.getToken(EnquestesParser.ID, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.SEMI)
            else:
                return self.getToken(EnquestesParser.SEMI, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.COMMA)
            else:
                return self.getToken(EnquestesParser.COMMA, i)

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.LPAR)
            else:
                return self.getToken(EnquestesParser.LPAR, i)

        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.RPAR)
            else:
                return self.getToken(EnquestesParser.RPAR, i)

        def LCLAU(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.LCLAU)
            else:
                return self.getToken(EnquestesParser.LCLAU, i)

        def RCLAU(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.RCLAU)
            else:
                return self.getToken(EnquestesParser.RCLAU, i)

        def ARROW(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ARROW)
            else:
                return self.getToken(EnquestesParser.ARROW, i)

        def PREGUNTA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.PREGUNTA)
            else:
                return self.getToken(EnquestesParser.PREGUNTA, i)

        def RESPOSTA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.RESPOSTA)
            else:
                return self.getToken(EnquestesParser.RESPOSTA, i)

        def ITEM(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ITEM)
            else:
                return self.getToken(EnquestesParser.ITEM, i)

        def ALTERNATIVA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ALTERNATIVA)
            else:
                return self.getToken(EnquestesParser.ALTERNATIVA, i)

        def ENQUESTA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ENQUESTA)
            else:
                return self.getToken(EnquestesParser.ENQUESTA, i)

        def getRuleIndex(self):
            return EnquestesParser.RULE_text_pregunta




    def text_pregunta(self):

        localctx = EnquestesParser.Text_preguntaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_text_pregunta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EnquestesParser.INT) | (1 << EnquestesParser.PREGUNTA) | (1 << EnquestesParser.RESPOSTA) | (1 << EnquestesParser.ITEM) | (1 << EnquestesParser.ALTERNATIVA) | (1 << EnquestesParser.ENQUESTA) | (1 << EnquestesParser.ID) | (1 << EnquestesParser.SEMI) | (1 << EnquestesParser.ARROW) | (1 << EnquestesParser.COMMA) | (1 << EnquestesParser.LPAR) | (1 << EnquestesParser.RPAR) | (1 << EnquestesParser.LCLAU) | (1 << EnquestesParser.RCLAU) | (1 << EnquestesParser.WORD))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EnquestesParser.INT) | (1 << EnquestesParser.PREGUNTA) | (1 << EnquestesParser.RESPOSTA) | (1 << EnquestesParser.ITEM) | (1 << EnquestesParser.ALTERNATIVA) | (1 << EnquestesParser.ENQUESTA) | (1 << EnquestesParser.ID) | (1 << EnquestesParser.SEMI) | (1 << EnquestesParser.ARROW) | (1 << EnquestesParser.COMMA) | (1 << EnquestesParser.LPAR) | (1 << EnquestesParser.RPAR) | (1 << EnquestesParser.LCLAU) | (1 << EnquestesParser.RCLAU) | (1 << EnquestesParser.WORD))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RespContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(EnquestesParser.IdentificadorContext,0)


        def SEP(self):
            return self.getToken(EnquestesParser.SEP, 0)

        def RESPOSTA(self):
            return self.getToken(EnquestesParser.RESPOSTA, 0)

        def NL(self):
            return self.getToken(EnquestesParser.NL, 0)

        def opcions_resposta(self):
            return self.getTypedRuleContext(EnquestesParser.Opcions_respostaContext,0)


        def getRuleIndex(self):
            return EnquestesParser.RULE_resp




    def resp(self):

        localctx = EnquestesParser.RespContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_resp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.identificador()
            self.state = 67
            self.match(EnquestesParser.SEP)
            self.state = 68
            self.match(EnquestesParser.RESPOSTA)
            self.state = 69
            self.match(EnquestesParser.NL)
            self.state = 70
            self.opcions_resposta()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opcions_respostaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opcio_resposta(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.Opcio_respostaContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.Opcio_respostaContext,i)


        def getRuleIndex(self):
            return EnquestesParser.RULE_opcions_resposta




    def opcions_resposta(self):

        localctx = EnquestesParser.Opcions_respostaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_opcions_resposta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.opcio_resposta()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EnquestesParser.INT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opcio_respostaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_opcio(self):
            return self.getTypedRuleContext(EnquestesParser.Id_opcioContext,0)


        def SEP(self):
            return self.getToken(EnquestesParser.SEP, 0)

        def text_opcio(self):
            return self.getTypedRuleContext(EnquestesParser.Text_opcioContext,0)


        def getRuleIndex(self):
            return EnquestesParser.RULE_opcio_resposta




    def opcio_resposta(self):

        localctx = EnquestesParser.Opcio_respostaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_opcio_resposta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.id_opcio()
            self.state = 78
            self.match(EnquestesParser.SEP)
            self.state = 79
            self.text_opcio()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Text_opcioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(EnquestesParser.SEMI, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.NL)
            else:
                return self.getToken(EnquestesParser.NL, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.INT)
            else:
                return self.getToken(EnquestesParser.INT, i)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.WORD)
            else:
                return self.getToken(EnquestesParser.WORD, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ID)
            else:
                return self.getToken(EnquestesParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.COMMA)
            else:
                return self.getToken(EnquestesParser.COMMA, i)

        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.LPAR)
            else:
                return self.getToken(EnquestesParser.LPAR, i)

        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.RPAR)
            else:
                return self.getToken(EnquestesParser.RPAR, i)

        def LCLAU(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.LCLAU)
            else:
                return self.getToken(EnquestesParser.LCLAU, i)

        def RCLAU(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.RCLAU)
            else:
                return self.getToken(EnquestesParser.RCLAU, i)

        def ARROW(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ARROW)
            else:
                return self.getToken(EnquestesParser.ARROW, i)

        def PREGUNTA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.PREGUNTA)
            else:
                return self.getToken(EnquestesParser.PREGUNTA, i)

        def RESPOSTA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.RESPOSTA)
            else:
                return self.getToken(EnquestesParser.RESPOSTA, i)

        def ITEM(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ITEM)
            else:
                return self.getToken(EnquestesParser.ITEM, i)

        def ALTERNATIVA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ALTERNATIVA)
            else:
                return self.getToken(EnquestesParser.ALTERNATIVA, i)

        def ENQUESTA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.ENQUESTA)
            else:
                return self.getToken(EnquestesParser.ENQUESTA, i)

        def getRuleIndex(self):
            return EnquestesParser.RULE_text_opcio




    def text_opcio(self):

        localctx = EnquestesParser.Text_opcioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_text_opcio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EnquestesParser.INT) | (1 << EnquestesParser.PREGUNTA) | (1 << EnquestesParser.RESPOSTA) | (1 << EnquestesParser.ITEM) | (1 << EnquestesParser.ALTERNATIVA) | (1 << EnquestesParser.ENQUESTA) | (1 << EnquestesParser.ID) | (1 << EnquestesParser.ARROW) | (1 << EnquestesParser.COMMA) | (1 << EnquestesParser.LPAR) | (1 << EnquestesParser.RPAR) | (1 << EnquestesParser.LCLAU) | (1 << EnquestesParser.RCLAU) | (1 << EnquestesParser.WORD))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EnquestesParser.INT) | (1 << EnquestesParser.PREGUNTA) | (1 << EnquestesParser.RESPOSTA) | (1 << EnquestesParser.ITEM) | (1 << EnquestesParser.ALTERNATIVA) | (1 << EnquestesParser.ENQUESTA) | (1 << EnquestesParser.ID) | (1 << EnquestesParser.ARROW) | (1 << EnquestesParser.COMMA) | (1 << EnquestesParser.LPAR) | (1 << EnquestesParser.RPAR) | (1 << EnquestesParser.LCLAU) | (1 << EnquestesParser.RCLAU) | (1 << EnquestesParser.WORD))) != 0)):
                    break

            self.state = 86
            _la = self._input.LA(1)
            if not(_la==EnquestesParser.NL or _la==EnquestesParser.SEMI):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EnquestesParser.NL:
                self.state = 87
                self.match(EnquestesParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_opcioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(EnquestesParser.INT, 0)

        def getRuleIndex(self):
            return EnquestesParser.RULE_id_opcio




    def id_opcio(self):

        localctx = EnquestesParser.Id_opcioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_opcio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(EnquestesParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(EnquestesParser.IdentificadorContext,0)


        def SEP(self):
            return self.getToken(EnquestesParser.SEP, 0)

        def ITEM(self):
            return self.getToken(EnquestesParser.ITEM, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.NL)
            else:
                return self.getToken(EnquestesParser.NL, i)

        def id_preg(self):
            return self.getTypedRuleContext(EnquestesParser.Id_pregContext,0)


        def ARROW(self):
            return self.getToken(EnquestesParser.ARROW, 0)

        def id_resp(self):
            return self.getTypedRuleContext(EnquestesParser.Id_respContext,0)


        def getRuleIndex(self):
            return EnquestesParser.RULE_item




    def item(self):

        localctx = EnquestesParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.identificador()
            self.state = 93
            self.match(EnquestesParser.SEP)
            self.state = 94
            self.match(EnquestesParser.ITEM)
            self.state = 95
            self.match(EnquestesParser.NL)
            self.state = 96
            self.id_preg()
            self.state = 97
            self.match(EnquestesParser.ARROW)
            self.state = 98
            self.id_resp()
            self.state = 99
            self.match(EnquestesParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_pregContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EnquestesParser.ID, 0)

        def getRuleIndex(self):
            return EnquestesParser.RULE_id_preg




    def id_preg(self):

        localctx = EnquestesParser.Id_pregContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_preg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(EnquestesParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_respContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EnquestesParser.ID, 0)

        def getRuleIndex(self):
            return EnquestesParser.RULE_id_resp




    def id_resp(self):

        localctx = EnquestesParser.Id_respContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_id_resp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(EnquestesParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(EnquestesParser.IdentificadorContext,0)


        def SEP(self):
            return self.getToken(EnquestesParser.SEP, 0)

        def ALTERNATIVA(self):
            return self.getToken(EnquestesParser.ALTERNATIVA, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.NL)
            else:
                return self.getToken(EnquestesParser.NL, i)

        def id_preg(self):
            return self.getTypedRuleContext(EnquestesParser.Id_pregContext,0)


        def alternatives(self):
            return self.getTypedRuleContext(EnquestesParser.AlternativesContext,0)


        def getRuleIndex(self):
            return EnquestesParser.RULE_alte




    def alte(self):

        localctx = EnquestesParser.AlteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_alte)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.identificador()
            self.state = 106
            self.match(EnquestesParser.SEP)
            self.state = 107
            self.match(EnquestesParser.ALTERNATIVA)
            self.state = 108
            self.match(EnquestesParser.NL)
            self.state = 109
            self.id_preg()
            self.state = 110
            self.alternatives()
            self.state = 111
            self.match(EnquestesParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCLAU(self):
            return self.getToken(EnquestesParser.LCLAU, 0)

        def RCLAU(self):
            return self.getToken(EnquestesParser.RCLAU, 0)

        def alternativa(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EnquestesParser.AlternativaContext)
            else:
                return self.getTypedRuleContext(EnquestesParser.AlternativaContext,i)


        def getRuleIndex(self):
            return EnquestesParser.RULE_alternatives




    def alternatives(self):

        localctx = EnquestesParser.AlternativesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_alternatives)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(EnquestesParser.LCLAU)
            self.state = 115 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.alternativa()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EnquestesParser.LPAR):
                    break

            self.state = 119
            self.match(EnquestesParser.RCLAU)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(EnquestesParser.LPAR, 0)

        def id_opcio(self):
            return self.getTypedRuleContext(EnquestesParser.Id_opcioContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EnquestesParser.COMMA)
            else:
                return self.getToken(EnquestesParser.COMMA, i)

        def id_preg(self):
            return self.getTypedRuleContext(EnquestesParser.Id_pregContext,0)


        def RPAR(self):
            return self.getToken(EnquestesParser.RPAR, 0)

        def getRuleIndex(self):
            return EnquestesParser.RULE_alternativa




    def alternativa(self):

        localctx = EnquestesParser.AlternativaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_alternativa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(EnquestesParser.LPAR)
            self.state = 122
            self.id_opcio()
            self.state = 123
            self.match(EnquestesParser.COMMA)
            self.state = 124
            self.id_preg()
            self.state = 125
            self.match(EnquestesParser.RPAR)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EnquestesParser.COMMA:
                self.state = 126
                self.match(EnquestesParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnquContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(EnquestesParser.IdentificadorContext,0)


        def SEP(self):
            return self.getToken(EnquestesParser.SEP, 0)

        def ENQUESTA(self):
            return self.getToken(EnquestesParser.ENQUESTA, 0)
